Versão atualizada. Retirado todos os Lints.